--- a/ethereum/relayer/Cargo.toml
+++ b/ethereum/relayer/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
-name = "relayer"
+name = "factom-relayer"
 version = "0.1.0"
 authors = ["Sergey Bushnyak <sergey.bushnyak@sigrlami.eu>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+wasm-bindgen = "0.2.68"
+parity-bytes = "0.1.2"
+libsecp256k1 = "0.3.5"
+ethereum-types = "0.9.2" 
+keccak-hash = "0.5.1"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
