--- a/web/package.json
+++ b/web/package.json
@@ -1,44 +1,43 @@
 {
-    "name": "fae-ui",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@chakra-ui/react": "git+ssh://git@github.com:chakra-ui/chakra-ui",
-        "@testing-library/jest-dom": "^5.9.0",
-        "@testing-library/react": "^10.2.1",
-        "@testing-library/user-event": "^12.0.2",
-        "@types/jest": "^25.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
-        "framer-motion": "^2.9.4",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-icons": "^3.0.0",
-        "react-scripts": "4.0.0",
-        "react-spinners": "^0.9.0",
-        "typescript": "^3.9.5",
-        "web-vitals": "^0.2.2"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "fae-ui",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.0",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
